force-app/main/default/objects/Revenue_Schedule__c/Revenue_Schedule__c.object-meta.xml
<CustomObject>
    <label>Schedule</label>
    <nameField>
        <displayFormat>RS-{00000}</displayFormat>
        <label>Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>