force-app/main/default/objects/Revenue_Schedule__c/fields/Actual__c.field-meta.xml
<CustomField>
    <fullName>Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>