force-app/main/default/objects/Revenue_Schedule__c/fields/Billing_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status__c</fullName>
    <formula>IF (!Opportunity__r.IsClosed, &apos;Unearned&apos;, IF (Opportunity__r.IsWon &amp;&amp; Revenue_Schedule_Date__c &lt; ADDMONTHS(DATE(YEAR(TODAY()), MONTH(TODAY()), 1), 1), &apos;Earned&apos;, &apos;Unearned&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Status</label>
    <type>Text</type>
</CustomField>