force-app/main/default/objects/Revenue_Schedule__c/fields/Cumulative_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Revenue__c</fullName>
    <label>Cumulative Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>