force-app/main/default/objects/Revenue_Schedule__c/fields/Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Amount__c</fullName>
    <formula>IF(   ISPICKVAL( Opportunity__r.StageName , &apos;Closed Won&apos; )  , 
      Updated_Revenue_Amount__c ,  
      Revenue_Amount__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>