force-app/main/default/objects/Revenue_Schedule__c/fields/Forecast_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Quantity__c</fullName>
    <formula>IF(
TEXT(Opportunity__r.StageName ) &lt;&gt; &apos;Closed Won&apos;,
Quantity__c,
Latest_Forecast__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>