force-app/main/default/objects/Revenue_Schedule__c/fields/Is_Won__c.field-meta.xml
<CustomField>
    <fullName>Is_Won__c</fullName>
    <formula>Opportunity__r.IsWon</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Won</label>
    <type>Checkbox</type>
</CustomField>