force-app/main/default/objects/Revenue_Schedule__c/fields/Latest_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Latest_Forecast__c</fullName>
    <label>Actual Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>