force-app/main/default/objects/Revenue_Schedule__c/fields/Opportunity_Probability__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Probability__c</fullName>
    <formula>Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Probability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>