force-app/main/default/objects/Revenue_Schedule__c/fields/Pipeline_Category__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Category__c</fullName>
    <formula>TEXT(Opportunity__r.ForecastCategoryName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline Category</label>
    <type>Text</type>
</CustomField>