force-app/main/default/objects/Revenue_Schedule__c/fields/Previous_Revenue_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Previous_Revenue_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Revenue Schedule</label>
    <referenceTo>Revenue_Schedule__c</referenceTo>
    <relationshipName>Previous_Revenue_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>