force-app/main/default/objects/Revenue_Schedule__c/fields/Product_Family_F__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_F__c</fullName>
    <formula>TEXT(Product__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>