force-app/main/default/objects/Revenue_Schedule__c/fields/Revenue_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Schedule_Date__c</fullName>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>