force-app/main/default/objects/Revenue_Schedule__c/fields/Revenue_Schedule_Period__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Schedule_Period__c</fullName>
    <formula>LPAD(TEXT(MONTH(Revenue_Schedule_Date__c )),2,&quot;0&quot;) + &quot;/&quot; + TEXT(YEAR(Revenue_Schedule_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Period</label>
    <type>Text</type>
</CustomField>