force-app/main/default/objects/Revenue_Schedule__c/fields/Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Target</label>
    <referenceTo>GSP_Revenue_Target__c</referenceTo>
    <relationshipName>Revenue_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>