force-app/main/default/objects/Revenue_Schedule__c/fields/Schedule_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Opportunity_ID__c</fullName>
    <formula>Opportunity__r.Opportunity_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Opportunity ID</label>
    <type>Text</type>
</CustomField>