force-app/main/default/objects/Revenue_Schedule__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Scheduled Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>Pipeline</label>
            </value>
            <value>
                <fullName>Booked</fullName>
                <color>#78C953</color>
                <label>Booked</label>
            </value>
            <value>
                <fullName>Shipped</fullName>
                <color>#E27001</color>
                <label>Shipped</label>
            </value>
            <value>
                <fullName>Invoiced</fullName>
                <color>#A845DC</color>
                <label>Invoiced</label>
            </value>
            <value>
                <fullName>Paid</fullName>
                <color>#009900</color>
                <label>Paid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>