force-app/main/default/objects/Revenue_Schedule__c/fields/Updated_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Updated_Revenue_Amount__c</fullName>
    <formula>Latest_Forecast__c * (Opportunity_Product__r.UnitPrice - (Opportunity_Product__r.UnitPrice *  Opportunity_Product__r.Discount))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>