force-app/main/default/objects/Revenue_Schedule__c/fields/Weighted_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Revenue_Amount__c</fullName>
    <formula>Revenue_Amount__c * Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Revenue Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>